--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -1,30 +1,25 @@
 global:
-  scrape_interval: 15s
-  evaluation_interval: 15s
-
-rule_files:
-  # - "first_rules.yml"
-  # - "second_rules.yml"
+  scrape_interval: 5s
+  evaluation_interval: 5s
 
 scrape_configs:
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
-
+  # Banking metrics exporter
   - job_name: 'banking-metrics'
     static_configs:
       - targets: ['metrics-exporter:8080']
     scrape_interval: 5s
-    metrics_path: '/metrics'
-    
+    metrics_path: /metrics
+
+  # Elasticsearch metrics
   - job_name: 'elasticsearch'
     static_configs:
       - targets: ['elasticsearch:9200']
-    metrics_path: '/_prometheus/metrics'
-    scrape_interval: 30s
+    scrape_interval: 15s
+    metrics_path: /_prometheus/metrics
 
-  - job_name: 'logstash'  
+  # Logstash metrics  
+  - job_name: 'logstash'
     static_configs:
       - targets: ['logstash:9600']
-    metrics_path: '/_node/stats'
-    scrape_interval: 30s 
+    scrape_interval: 15s
+    metrics_path: /_node/stats 
